[8.3.0]
 * add Instagram (https://www.instagram.com/) API (thanks to https://github.com/faent)
 * add getErrorMessage method to FacebookAccessTokenErrorResponse. Should be used instead of general getMessage method
   from the parent Exception

[8.2.0]
 * add ScopeBuilder to easily specify multiple scopes while requesting OAuth2.0 Access Tokens
 * make Base64 en/de-coding not dependent from java8 implementation (use three optional implementation
    (internal java 8+, Apache Commons Codec, JAXB) detected in runtime) (thanks to https://github.com/CodingFabian)
 * implement possibility to add extra parameters to Access Token Request
    (AccessTokenRequestParams#*ExtraParameters methods), https://github.com/scribejava/scribejava/issues/980
    (thanks to https://github.com/pmorch)

[8.1.0]
 * add raw Response (with HTTP response code and body) as member to the OAuth2AccessTokenErrorResponse
 * add possibility to set "" (empty string) as apiSecret
 * add Slack API (https://slack.com/) (thanks to https://github.com/petrkopotev)

[8.0.0]
 * add Kakao API (https://kakao.com/) (thanks to https://github.com/v0o0v)
 * support chunks in JDKHttpClient's Multipart (thanks to https://github.com/eos1d3)
 * add support for OAuth 2.0 Device Authorization Grant (RFC 8628) (thanks to https://github.com/rebarbora-mckvak)
 * update Google API URLs

[7.1.1]
 * add Proxy support (via config's option) to internal JDKHttpClient (thanks to https://github.com/bjournaud)
 * fix typo (change "Verfier" to "Verifier") (thanks to https://github.com/afkbrb)
 * fix Multipart support in JDKHttpClient (thanks to https://github.com/eos1d3)

[7.0.0]
 * Add Polar API (https://www.polar.com/) (thanks to https://github.com/vidi42)
 * make Response accept resources to autoclose and autoclose it (thanks to https://github.com/drei01)
 * fix url encoding in POST payload (it's needed for 'application/x-www-form-urlencoded' Content-Type)
     + unit tests (thanks to https://github.com/max904-github)