@@ -3,7 +3,7 @@ package com.github.scribejava.core.base64;
 public class Java8Base64 extends Base64 {
 
     private static final com.github.scribejava.java8.base64.Java8Base64 JAVA8_BASE64
-            = new com.github.scribejava.java8.base64.Java8Base64();
+            = isAvailable() ? new com.github.scribejava.java8.base64.Java8Base64() : null;
 
     @Override
     protected String internalEncode(byte[] bytes) {
